feat: signal, examples output

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -29,6 +29,8 @@ linters:
     - exhaustivestruct
     - testpackage
     - exhaustruct
+    - structcheck # deprecated
+    - depguard # deprecated
   fast: false
 
 issues:
